--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block main %}
+<main>
     <body>
         <div class="sign-up">
             <h3>SIGN UP</h3>
@@ -34,12 +35,12 @@
                     <label for="confirmPassword">confirm password</label>
                     <input type="password" name="confirmpassword">
                 </section>
-                <hr>
-                <button class=".btn .btn-primary">CREATE ACCOUNT</button>
+                <button class="btn btn-primary detail">CREATE ACCOUNT</button>
                 <P>Already have an account <a href="">log in</a> ?</P>
         </form>
         </div>
     </body>
+</main>
 {% endblock %}
 
 {% block javascript %}
