--- a/templates/core/home.html
+++ b/templates/core/home.html
@@ -35,7 +35,7 @@
                             <div>
                                 <h4>Black Sweat Shirt</h4>
                                 <p>
-                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit.
                                 </p>
                             </div>
                             <button class="btn-secondary">VIEW PRODUCT</button>
@@ -62,6 +62,27 @@
                                 <h4>Black Sweat Shirt</h4>
                                 <p>
                                     Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                    sdjhkgsd;llgs sdjhkgak dsfhfshssdgazxc
+                                    dsgasdasdggggggg
+                                    asdhdah 
+                                    dsga
+                                </p>
+                            </div>
+                            <button class="btn-secondary">VIEW PRODUCT</button>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <img src="{% static '/images/card1 1.png' %}" alt="product img man">
+                        <div class="product">
+                            <span>KSH 2000</span>
+                            <div>
+                                <h4>Black Sweat Shirt</h4>
+                                <p>
+                                    Lorem, ipsum dolor vsit amet consectetur adipisicing elit. Nobis, recusandae.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis, recusandae.
+                                    sdjhkgsd;llgs sdjhkgak dsfhfshssdgazxc
+                                    dsgasdasdggggggg
+                                    asdhdah 
+                                    dsga
                                 </p>
                             </div>
                             <button class="btn-secondary">VIEW PRODUCT</button>
