--- a/templates/core/signUp.html
+++ b/templates/core/signUp.html
@@ -1,4 +1,4 @@
-{% extends './../base.html' %}
+<!-- {% extends './../base.html' %}
 {% load static %}
 
 
@@ -11,7 +11,7 @@
 {% block main %}
     <body>
         <div class="sign-up">
-            <h3>SIGN UP</h3>
+            <h3 class="detail">SIGN UP</h3>
             <section class="input-fields">
                 <label for="firstName">First Name</label>
                 <input type="text" name="firstname">
@@ -28,12 +28,12 @@
                 <label for="password">password</label>
                 <input type="password" name="password">
             </section>
+            <p>joan</p>
             <section class="input-fields">
                 <label for="confirmPassword">confirm password</label>
                 <input type="password" name="confirmPassword">
             </section>
-            <hr>
-            <button class=".btn .btn-primary">CREATE ACCOUNT</button>
+            <button class="btn-detail">CREATE ACCOUNT</button>
             <P>Already have an account <a href="">log in</a> ?</P>
         </div>
     </body>
@@ -42,4 +42,4 @@
 {% block javascript %}
 <script src=""></script>
 {% endblock %}
-
+ -->
