--- a/static/css/home.css
+++ b/static/css/home.css
@@ -20,17 +20,23 @@ main{
     display: flex;
     flex-direction: column;
     background-color: var(--primary-color);
-    
+    padding-right: 2.4rem;
 }
 .search-bar{
     display: flex;
     justify-content: center;
     height: 3rem;
     padding-top: 1rem;
+} 
+@media screen and (max-width: 600px) {
+    .search-bar{
+        display: none;
+    }
 }
 .search-bar input{
     border-radius: 1.5rem 0 0 1.5rem;
     width: 30rem;
+    flex-grow: 1;
 } 
 .search-bar button{
     border-radius: 0 1.5rem 1.5rem 0;
@@ -42,6 +48,11 @@ main{
     justify-content: center;
     align-items: center;
     padding-top: 1.2rem;
+}
+@media screen and (max-width: 1000px) {
+    .landing img{
+        display: none;
+    }
 }
 .landing div {
     display: flex;
@@ -78,42 +89,64 @@ main{
     flex-direction: column;
     padding: 3.9rem;
 }
-.product-section{
+.product-section {
     display: flex;
-    justify-content: space-between;
     padding-top: 2.8rem;
     gap: 3.9rem;
+    flex-wrap: wrap;
 }
-.product-card{
+.product-card {
     display: flex;
     flex-direction: column;
     width: calc(25% - 50px); 
     padding-right: 2.4rem;
     padding-left: 2.4rem;
-}
-.product-card img {
+    }
+
+@media screen and (max-width: 1000px){
+    .product-section{
+        display: flex;
+        flex-wrap: wrap;
+        padding-top: 0;
+    }
+    .product-card {
+        width: calc(50% - 4.8rem);
+        padding: 0;
+        padding-right: 2.4rem;
+        padding-left: 2.4rem;
+    }
+  
+    }
+
+    .product-card img {
     width: 20rem;
     height: 21rem;
 }
-.product-card div{
-    justify-content: center;
-}
-.product {
-    padding: 0.5rem 1.6rem 0.6rem 0.6rem 0.6rem;
+
+    .product-card .product {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 0.5rem 1.6rem 0.6rem 0.6rem;
 }
 
-.product span {
+    .product-card .product span {
     display: block;
 }
 
-.product div {
+.product-card .product div {
     margin-top: 1rem;
+    flex-grow: 1;
 }
 
-.product h4,
-.product p {
+.product-card .product h4,
+.product-card .product p {
     margin: 0.6rem 0;
+    flex-grow: 1;
+    flex-wrap: wrap;
 }
-.product button {
+
+.product-card .product button {
     margin-top: 0.6rem;
 }
