--- a/static/css/main.css
+++ b/static/css/main.css
@@ -33,6 +33,9 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 main {
