--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -36,7 +36,7 @@
                     <input type="password" name="confirmpassword">
                 </section>
                 <button class="btn btn-primary detail">CREATE ACCOUNT</button>
-                <P>Already have an account <a href="">log in</a> ?</P>
+                <P>Already have an account <a href="{% url 'accounts:login' %}">log in</a> ?</P>
         </form>
         </div>
     </body>
