--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,146 +1,229 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;500&family=Kalam:wght@300;400;700&family=Poppins:wght@100;200;300;400;500&family=Roboto:wght@100;300;400;500&family=Rubik:wght@300;400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&family=Ruthie&display=swap');
+
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-  font-family: Poppins;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: Poppins;
 }
 
 :root {
-  --primary-color: #ffffff;
-  --accent-color: #4a2dfc;
-  --secondary-color: #0c0101;
-  --light-grey: #d9d9d9;
-  --mid-grey: #7a7a7a;
-  --dark-grey: #353535;
+    --primary-color: #ffffff;
+    --accent-color: #4a2dfc;
+    --secondary-color: #0c0101;
+    --light-grey: #d9d9d9;
+    --mid-grey: #7a7a7a;
+    --dark-grey: #353535;
 
-  --btn-primary-color: var(--accent-color);
-  --btn-secondary-color: var(--dark-grey);
-  --btn-small-color: var(--primary-color);
-  --btn-primary-text-color: var(--primary-color);
-  --btn-secondary-text-color: var(--primary-color);
+    --btn-primary-color: var(--accent-color);
+    --btn-secondary-color: var(--dark-grey);
+    --btn-small-color: var(--primary-color);
+    --btn-primary-text-color: var(--primary-color);
+    --btn-secondary-text-color: var(--primary-color);
 
-  --text-primary-color: var(--secondary-color);
-  --text-secondary-color: var(--mid-grey);
-  --text-light-color: var(--light-grey);
-  --text-superlight-color: var(--primary-color);
-  --text-accent-color: var(--accent-color);
+    --text-primary-color: var(--secondary-color);
+    --text-secondary-color: var(--mid-grey);
+    --text-light-color: var(--light-grey);
+    --text-superlight-color: var(--primary-color);
+    --text-accent-color: var(--accent-color);
 }
 
 body {
-  font-size: 18px;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
+    font-size: 18px;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+li {
+    list-style: none;
+}
+
+a {
+    cursor: pointer;
+    text-decoration: none;
+    color: inherit;
+}
+
+form a{
+    color: var(--accent-color);
 }
 
 main {
-  flex-grow: 1;
+    flex-grow: 1;
 }
 
 .btn {
-  padding: 0.5rem 1rem;
+    padding: 0.5rem 1rem;
 }
 
 .btn-primary {
-  background-color: var(--btn-primary-color);
-  color: var(--btn-primary-text-color);
-  width: 16.6rem;
-  height: 2.2rem;
-  border: none;
-  border-radius: 0;
-  margin-bottom: 1.7rem;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
-  padding-left: 2.08rem;
-  padding-right: 2.08rem;
-  font-size: 0.9rem;
-  font-weight: 700;
-  cursor: pointer;
+    background-color: var(--btn-primary-color);
+    color: var(--btn-primary-text-color);
+    width: 16.6rem;
+    height: 2.2rem;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 1.7rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    padding-left: 2.08rem;
+    padding-right: 2.08rem;
+    font-size: 0.9rem;
+    font-weight: 700;
+    cursor: pointer;
 }
 
 .btn-secondary {
-  background-color: var(--btn-secondary-color);
-  color: var(--btn-secondary-text-color);
-  width: 100%;
-  height: 2.2rem;
-  border: none;
-  border-radius: 0;
-  margin-bottom: 1.7rem;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
-  padding-left: 2.08rem;
-  padding-right: 2.08rem;
-  font-size: 0.9rem;
-  font-weight: 700;
-  cursor: pointer;
+    background-color: var(--btn-secondary-color);
+    color: var(--btn-secondary-text-color);
+    width: 100%;
+    height: 2.2rem;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 1.7rem;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    padding-left: 2.08rem;
+    padding-right: 2.08rem;
+    font-size: 0.9rem;
+    font-weight: 700;
+    cursor: pointer;
 }
+
 footer {
-  background-color: var(--dark-grey);
-  height: 12.8rem;
-  width: 100%;
-  color: var(--text-superlight-color);
+    background-color: var(--dark-grey);
+    height: 12.8rem;
+    width: 100%;
+    color: var(--text-superlight-color);
 }
+
 footer p {
-  font-weight: 700;
-  font-size: 1.3rem;
-  letter-spacing: 0.06rem;
+    font-weight: 700;
+    font-size: 1.3rem;
+    letter-spacing: 0.06rem;
 }
+
 footer li {
-  list-style: none;
-  margin-top: 0.4rem;
-  margin-bottom: 0.8rem;
+    margin-top: 0.4rem;
+    margin-bottom: 0.8rem;
 }
+
 footer a {
-  cursor: pointer;
-  text-decoration: none;
-  color: var(--text-superlight-color);
+    color: var(--text-superlight-color);
 }
+
 .social-platforms span {
-  color: var(--text-light-color);
+    color: var(--text-light-color);
 }
+
 .footer-container {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
 }
 
 .icons-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .legal-policy,
 .Categories,
 .social-platforms {
-  margin: 1.5rem 9rem 0 7rem;
+    margin: 1.5rem 9rem 0 7rem;
 }
 
-header{
+header {
     width: 100%;
     height: 4rem;
     background-color: var(--secondary-color);
-    padding-bottom: 1rem;
-}
-.header-container{
-    display: flex;
-    justify-content: space-between;
+    padding: 1rem 3rem;
     color: var(--text-superlight-color);
     align-items: center;
-    height: 100%;
-}
-.header-icons{
     display: flex;
     justify-content: space-between;
-    padding-right: 1.2rem;
 }
-.hambugger{
-    padding-left: 1.2rem;
+
+.header-icons {
+    display: flex;
+    justify-content: space-between;
+    gap: 2rem;
+    position: relative;
+    color: var(--primary-color);
+}
+
+#logo{
+    font-family: 'Istok Web', sans-serif;
+    font-family: 'Ruthie', cursive;
+    font-size: 2rem;
+}
+
+#sidebar {
+    height: 100vh;
+    width: 16rem;
+    position: fixed;
+    top: 0;
+    left: -16rem;
+    background: var(--light-grey);
+    padding-top: 2.5rem;
+}
+
+
+#sidebar li {
+    margin: 0 2rem 1rem 2rem;
+    border: 1px solid var(--dark-grey);
+    color: var(--dark-grey);
+    padding: .28rem 1rem;
+}
+
+#sidebar li:hover {
+    background: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+#sidebar-close {
+    position: absolute;
+    top: .5rem;
+    right: .5rem;
+    color: black;
+}
+
+
+#profile-options {
+    display: none;
+    position: absolute;
+    top: 100%;
+    right: 0;
+    background-color: var(--light-grey);
+    border: 1px solid var(--dark-grey);
+    width: 200px;
+    color: var(--dark-grey);
+}
+
+#profile-options.show {
+    display: block;
+}
+
+#profile-options span {
+    display: block;
+    padding: .5rem .5rem;
+    cursor: pointer;
+}
+
+#profile-options span:hover {
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
+}
+
+.full-width-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    color: inherit;
 }
