--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     {% include 'components/header.html' %}
     {% block main %}{% endblock %}
     {% include 'components/footer.html' %}
+    <script src="{% static '/js/main.js' %}"></script>
     {% block javascript %}{% endblock %}
 </body>
 </html>
